syntax = "proto3";
package tgvalidatord;

option java_package = "com.taurushq.sdk.protect.proto.v1";

message ERCTokenMetadata {
  string name = 1;
  string description = 2;
  uint64 decimals = 3;
  string dataType = 4;
  string base64Data = 5;
  string uri = 6;
}

message FATokenMetadata {
  string name = 1;
  string symbol = 2;
  uint64 decimals = 3;
  string dataType = 4;
  string base64Data = 5;
  string uri = 6;
}

message CryptoPunkMetadata {
  uint64 punkId = 1;
  string punkAttributes = 2;
  bytes image = 3;
}
